examples/bad/empty_struct.hmy
service_name: EmptyStruct
service_version: 1.0.0

struct Struct1 {
  
}

resource Struct1 ("/struct1")
